--- a/WebContent/Inicio.html
+++ b/WebContent/Inicio.html
@@ -18,8 +18,9 @@ box-shadow: 30px 30px 10px;
 }
 
 #titulo{
-    font: bold 100px  ;
+    font-size: 40px  ;
     text-shadow: greenyellow 3px 3px 3px;
+
 }
 </style>
 
